# HomeTest-AQA

./: .gitignore  CHANGELOG.md  README.md  config.json  package-lock.json  pyproject.toml
features/: env_manager.py  environment.py  environment_desktop.py
features/pages/: base_page.py  directory_page.py  landing_page.py  search_page.py  streamer_page.py  web_utils.py
features/scenarios/api/: get_fact_by_id_test.feature  get_fact_list_test.feature
features/scenarios/web/: twitch_test.feature
features/steps/api/: common_api_steps.py  fact_steps.py
features/steps/web/: common_steps.py
utils/: api_utils.py  words_to_colors.py
